prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/malformed_number.nut
// EXPECT_ERROR: "malformed number"
let x = 1.2.3
